--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
-dist: bionic
+language: generic
+
+os:
+  - linux
+  - osx
+
 sudo: required
 before_install:
-        - sudo apt-get update
-        # Instalacao do texlive para execucao garantida de pacotes do latex
-        - sudo apt-get install texlive-full
-        # Instalacao dos requisitos minimos para o abntex2
-        - sudo apt-get install texlive-publishers texlive-lang-portuguese texlive-latex-extra texlive-fonts-recommended
+        - if [ "$TRAVIS_OS_NAME" = "linux" ]
+          then 
+                sudo apt-get update;
+                # Instalacao do texlive para execucao garantida de pacotes do latex
+                sudo apt-get install texlive-full;
+                # Instalacao dos requisitos minimos para o abntex2
+                sudo apt-get install texlive-publishers texlive-lang-portuguese texlive-latex-extra texlive-fonts-recommended;
+          else 
+                brew cask install mactex; 
+          fi
 
 # Execucao do make. Sera feito duas vezes para verificacao de correto funcionamento.
 script:
